# Ackermann-chassis-PID-control

./: CMakeLists.txt  README.md  package.xml
ackermann-pid-pursuit/: CMakeLists.txt  package.xml
cfg/: angle_pid.cfg  angle_pid.yaml
include/: ackermann_pid_pursuit.hpp  judging_direction.hpp  pid_lib.hpp  pid_lib.hpp_bak_11
launch/: key2cmd.launch  path_pursuit_pid.launch
src/: ackermann_pid_pursuit.cpp  code.md  judge_direction.cpp  pid_lib.cpp  pid_lib.cpp_bak_11  test.cpp  utilities.cpp
src/params/: bike_angle_pid.yaml  bike_angle_velocity_pid.yaml  bike_speed_pid.yaml  drive_wheel_speed_pid.yaml  odrive_motor_config.yaml
